<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/size_5dp"
    android:background="@drawable/frame_for_recycler_view">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text" />

        <ImageView
            android:id="@+id/image_view_for_heroes"
            android:layout_width="@dimen/size_100dp"
            android:layout_height="@dimen/size_100dp"
            android:src="@drawable/ic_launcher_background" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/size_5dp"
            android:paddingTop="@dimen/size_5dp">


            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5dp"
                android:text="@string/name"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/films_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5dp"
                android:text="@string/films"

                android:textSize="@dimen/size_8dp"
                android:textStyle="italic" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_RV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5dp" />

            <TextView
                android:id="@+id/shows_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/size_5dp"
                android:text="@string/tv_shows"
                android:textSize="@dimen/size_8dp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/item_shows"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


        </LinearLayout>


    </LinearLayout>


    <ImageView
        android:id="@+id/favorite_image"
        android:layout_width="@dimen/size_20dp"
        android:layout_height="@dimen/size_20dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_star_black" />

</RelativeLayout>